Production build and commit

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- Prototype CSS -->
-    <link rel="stylesheet" href="/page/css/prototype.css">
+    <link rel="stylesheet" href="/bff3/css/prototype.css">
     <!-- Prism CSS -->
-    <link rel="stylesheet" href="/page/components/prism/prism-okaidia.css">
+    <link rel="stylesheet" href="/bff3/components/prism/prism-okaidia.css">
 
     <!-- Async Webfonts -->
     
@@ -33,7 +33,7 @@
 
 
     <!-- Modernizr stays in the head -->
-    <script src="/page/components/modernizr/modernizr.js"></script>
+    <script src="/bff3/components/modernizr/modernizr.js"></script>
   </head>
 
   <body>
@@ -118,9 +118,9 @@
 
     <!-- JavaScript goes in the footer! -->
     <!-- Prism JavaScript -->
-    <script src="/page/components/prism/prism.js"></script>
+    <script src="/bff3/components/prism/prism.js"></script>
     <!-- Polyfill for Details element -->
-    <script src="/page/components/Element.details/__COMPILE/Element.details.js"></script>
+    <script src="/bff3/components/Element.details/__COMPILE/Element.details.js"></script>
 
   
   </body>
